v3.17 (Month 2020)
  * Adjusted Uploads layout to provide more visibility to the output console.
  * Refactored dots-menu to make it available in any view.
  * Remove tag color from issue titles in issue summary.
  * Use shared noscript partial
  * Upgraded gems: puma, sass-rails
  * Bugs fixed:
    - Long project names interfering with search bar expansion.
    - Report 'Download' button becoming a disabled 'Processing...' button once clicked.
    - Set :author when creating Evidence from an Issue.
    - Bug tracker items: #N, #M, #O, ...
  * New integrations:
    - [new integration #1]
  * Integration enhancements:
    - Nexpose: better cipher wrapping coverage
    - Nikto: support new nested <niktoscan> format
  * Reporting enhancements:
    - HTML reports now use main app's markup rendering.
  * REST/JSON API enhancements:
    - [API enhancement #1] 
  * Security Fixes:
    - High: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Medium: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Low: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]

v3.16 (February 2020)
  * Update app to new Tylium layout
  * Upgrade to Rails 5.2.4.1
  * Add revision history for cards
  * Remove mysql2 gem dependency
  * Bugs fixed:
    - Fix errors on content overwrite flash messages
    - Fail and redirect to login instead of raising an error when attempting to log in as a user that has been removed
    - Fix Cancel link path for the Note Edit page

v3.15 (November 2019)
 - Methodologies v2:
   - Kanban-style boards replaced the checklists
   - Tasks can move between lists
   - Assign tasks to different team members
   - Keep Notes and information on each task
   - Export Methodology details into your reports
 - Email notifications
 - Add notification settings to decide how often to get email notifications