@@ -3,8 +3,11 @@
 module CommentsHelper
   def comment_formatter(comment)
     @comment_pipeline ||= HTML::Pipeline.new [
-      HTML::Pipeline::DradisCommentFilter,
+      HTML::Pipeline::TextileFilter,
+      HTML::Pipeline::SanitizationFilter,
+      HTML::Pipeline::AutolinkFilter,
       HTML::Pipeline::DradisMentionsFilter,
+      HTML::Pipeline::DradisCodeHighlightFilter
     ], {
       mentionable_users: @mentionable_users || current_project.testers_for_mentions,
       username_pattern: Comment::MENTION_PATTERN,
